--- a/demo/index.html
+++ b/demo/index.html
@@ -21,6 +21,9 @@
 
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
+
+    <style>
+    </style>
   </head>
   <body>
 
@@ -29,8 +32,11 @@
       <demo-snippet>
         <template>
           <slide-imgs>
-            <img data-src="">
-            <img data-src="">
+            <!-- Lazy-load Images -->
+            <img data-src="https://app-layout-assets.appspot.com/assets/bg1.jpg">
+            <img data-src="https://app-layout-assets.appspot.com/assets/bg2.jpg">
+            <img data-src="https://app-layout-assets.appspot.com/assets/bg3.jpg">
+            <img data-src="https://app-layout-assets.appspot.com/assets/bg4.jpg">
           </slide-imgs>
         </template>
       </demo-snippet>
