--- a/slide-imgs.html
+++ b/slide-imgs.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="../iron-icons/image-icons.html">
+<link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
 <dom-module id="slide-imgs">
   <template>
