demo画像を差し替え

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,10 +32,27 @@
       <demo-snippet>
         <template>
           <slide-imgs list note="demo1">
-            <img data-src="https://app-layout-assets.appspot.com/assets/bg1.jpg">
-            <img data-src="https://app-layout-assets.appspot.com/assets/bg2.jpg">
-            <img data-src="https://app-layout-assets.appspot.com/assets/bg3.jpg">
-            <img data-src="https://app-layout-assets.appspot.com/assets/bg4.jpg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.001.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.002.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.003.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.004.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.005.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.006.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.007.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.008.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.009.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.010.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.011.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.012.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.013.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.014.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.015.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.016.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.017.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.018.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.019.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.020.jpeg">
+            <img data-src="https://daiiz-apps.appspot.com/static1/lt15/lt15-jpg.021.jpeg">
           </slide-imgs>
         </template>
       </demo-snippet>
